--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,12 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    font-family: 'Times New Roman', Times, serif;
+    font: normal 16px helvetica, arial, sans-serif;
+    padding: 50px 100px;
+}
+
+h1 {
+    font-size: 36px;
 }
